# unittest_demo

./: .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
cmake/: googletest-download.cmake
test/: CMakeLists.txt  gmock_global_sample.cpp  testPerf.cpp  testStub.cpp
tool/: sonar_test.xsl  xml_convert.py
util/: CMakeLists.txt  unittest_gmock_global.h  unittest_perf.cpp  unittest_perf.h  unittest_stub.h
